# task-api

./: .gitignore  LICENTE.md  README.md
app/: Cargo.toml
app/migrations/2020-09-26-205731_tasks/: up.sql
app/src/: db.rs  main.rs  schema.rs
app/src/models/: tasks.rs
