[package]
name = "app"
version = "0.1.0"
authors = ["migeruj"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.5", features = ["mysql","r2d2","chrono"] }
dotenv = "0.15.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json","diesel_mysql_pool"]